[package]
name = "vega"
version = "0.1.0"
authors = ["raja <rajasekar3eg@gmail.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "vega"

[features]
aws_connectors = ["rusoto_core", "rusoto_s3"]

[dependencies]
async-trait = "0.1.56"
crossbeam = "0.7.3"
dashmap = "5.3.4"
envy = "0.4.2"
fasthash = "0.4.0"
futures = { version = "0.3.21" }
hyper = "0.13.4"
http = "0.2.8"
itertools = "0.10.3"
num_cpus = "1.13.1"
log = "0.4.17"
once_cell = "1.12.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
simplelog = "0.12.0"
statrs = "0.12.0"
thiserror = "1.0.31"
threadpool = "1.8.1"
toml = "0.5.9"
tokio = { version = "0.2.18", features = ["macros", "parking_lot", "rt-threaded", "rt-util", "signal", "stream", "sync", "time"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
uuid = { version = "1.1.2", features = ["v4"] }
regex = "1.5.6"

ark-std = { version = "0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", path = "../algebra/serialize", default-features = false }
ark-ff = {  version = "^0.3.0", path = "../algebra/ff", default-features = false, features = ["asm"] }
ark-ec = { version = "^0.3.0", path = "../algebra/ec", default-features = false}
ark-poly = { version = "^0.3.0", path = "../algebra/poly", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", features = ["curve"], rev = "677b4ae751a274037880ede86e9b6f30f62635af" }
ark-bls12-381 = { version = "0.3.0", path = "../curves/bls12_381", default-features = false, features = ["curve"] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", rev = "677b4ae751a274037880ede86e9b6f30f62635af" }

# randomness
rand = "0.7.3"
rand_distr = "0.2"
rand_pcg = "0.2"

# serialization
bincode = "1.3.3"
capnp = "0.12.1"
capnp-futures = "0.12.0"
serde = { version = "1.0.137", features = ["rc"] }
serde_closure = "0.3.2"
serde_derive = "1.0.137"
uriparse = "0.6.4"

# dynamic typing
downcast-rs = "1.2.0"
dyn-clone = "1.0.6"
serde_traitobject = "0.2.7"

# optional features
## aws
rusoto_core = { version = "0.48.0", optional = true }
rusoto_s3 = { version = "0.48.0", optional = true }

[build-dependencies]
capnpc = "0.12.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] } 
chrono = "0.4.19"
parquet = "16.0.0"
tempfile = "3.3.0"
